# quicrtc

./: .gitignore  Cargo.toml  README.md
examples/: basic_usage.rs  connection_fallback_demo.rs  init_test.rs  moq_object_demo.rs  moq_stream_management_demo.rs  moq_wire_format_demo.rs  quic_transport_demo.rs  resource_management_demo.rs  room_builder_demo.rs  signaling_server_demo.rs  simple_camera_test.rs  simple_quic_demo.rs  transport_demo.rs  video_capture_demo.rs
quicrtc/: Cargo.toml
quicrtc-core/: Cargo.toml
quicrtc-core/src/: error.rs  lib.rs  moq.rs  moq_transport.rs  resource.rs  transport.rs
quicrtc-core/src/moq/: stream_manager.rs  wire_format.rs
quicrtc-core/tests/: moq_tests.rs  transport_integration.rs  transport_tests.rs
quicrtc-diagnostics/: Cargo.toml
quicrtc-diagnostics/src/: connection_analyzer.rs  debug_logger.rs  lib.rs  network_profiler.rs
quicrtc-media/: Cargo.toml
quicrtc-media/src/: codecs.rs  error.rs  lib.rs  processing.rs  render.rs  tracks.rs  video_capture.rs  video_render.rs
quicrtc-media/src/capture/: avfoundation.rs  directshow.rs  mod.rs  v4l2.rs  webrtc.rs
quicrtc-media/src/video_render/: metal.rs
quicrtc-media/tests/: capture_tests.rs  codec_tests.rs  processing_tests.rs  render_tests.rs
quicrtc-signaling/: Cargo.toml  README.md
quicrtc-signaling/src/: discovery.rs  lib.rs  protocol.rs  server.rs
quicrtc-signaling/tests/: integration_tests.rs  peer_discovery_tests.rs
quicrtc/src/: config.rs  event.rs  lib.rs  participant.rs  room.rs  track.rs
