[workspace]
members = [
    "quicrtc",
    "quicrtc-core", 
    "quicrtc-media",
    "quicrtc-signaling",
    "quicrtc-diagnostics",
]
resolver = "2"



[workspace.dependencies]
# Core async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# QUIC implementation
quinn = "0.11"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-platform-verifier = "0.5"

# Networking and protocols
socket2 = "0.5"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Media processing - Real codec dependencies
audiopus = "0.2"
openh264 = "0.8"
cpal = "0.16"
netstat2 = "0.9"

# WebSocket support for fallback
tokio-tungstenite = "0.21"
tungstenite = "0.21"

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
rand = "0.8"
parking_lot = "0.12"
dashmap = "5.0"
chrono = { version = "0.4", features = ["serde"] }

# Certificate generation and parsing
rcgen = "0.12"
rustls-pemfile = "2.0"

# Testing
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 1
debug = true