[package]
name = "quicrtc-media"
version = "0.1.0"
edition = "2021"
description = "Media processing, codecs, and quality control for QUIC RTC"
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
quicrtc-core = { path = "../quicrtc-core" }

# Async runtime
tokio = { workspace = true, features = ["sync", "time", "rt", "rt-multi-thread"] }
futures = { workspace = true }
async-trait = { workspace = true }

# Media codecs - Real codec libraries
audiopus = { workspace = true, optional = true }
openh264 = { workspace = true, optional = true }
cpal = { workspace = true }

# Cross-platform camera capture - Battle-tested solution
nokhwa = { version = "0.10", features = ["input-native"] }

# Video capture dependencies - Fixed versions (keeping for fallback/reference)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-av-foundation = { version = "0.3", features = ["AVCaptureDevice", "AVCaptureSession", "AVCaptureVideoDataOutput", "AVCapturePhotoOutput"] }
objc2-foundation = "0.3"
objc2-core-video = "0.3"
core-video-sys = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_DirectShow",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_Foundation"
] }

# Utilities
[dependencies.bytes]
workspace = true

[dependencies.serde] 
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.parking_lot]
workspace = true

[dev-dependencies]
tokio-test = { workspace = true }

[features]
default = ["opus", "h264"]
opus = ["audiopus"]
h264 = ["openh264"]
audio = ["opus"]
video = ["h264"]
codecs = ["opus", "h264"]